traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:18: error: value diag is not a member of Unit
possible cause: maybe a semicolon is missing before `value diag'?
    } diag=0 
      ^